2024_5_10 5月10日インターン作業

--- a/discord-clone-udemy/src/components/chat/Chat.scss
+++ b/discord-clone-udemy/src/components/chat/Chat.scss
@@ -4,6 +4,10 @@
   flex-grow: 1;
   background-color: #393943;
 
+  .chatMessage {
+    flex-grow: 1;
+  }
+
   .chatInput {
     display: flex;
     align-items: center;
