--- a/discord-clone-udemy/src/components/sidebar/Sidebar.scss
+++ b/discord-clone-udemy/src/components/sidebar/Sidebar.scss
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #212226;
+    background-color: #1a1c20;
     padding: 7px 15px;
 
 
@@ -77,7 +77,8 @@
         align-items: center;
 
         img {
-          width: 60px;
+          width: 55px;
+          border-radius: 50%;
         }
 
         .accountName {
@@ -96,7 +97,7 @@
 
       .sidebarVoice {
         display: flex;
-        align-items: center;
+        gap: 12px;
         color: #686a6e;
       }
     }
