--- a/discord-clone-udemy/src/components/chat/Chat.scss
+++ b/discord-clone-udemy/src/components/chat/Chat.scss
@@ -3,9 +3,11 @@
   flex-direction: column;
   flex-grow: 1;
   background-color: #393943;
+  height: 100vh;
 
   .chatMessage {
-    flex-grow: 1;
+    height: 100vh;
+    overflow-y: scroll;
   }
 
   .chatInput {
@@ -30,6 +32,11 @@
       }
       .chatInputButton {
         display: none;
+      }
+    }
+    .chatInputIcons {
+      .MuiSvgIcon-root {
+        padding: 5px;
       }
     }
   }
