--- a/discord-clone-udemy/src/components/login/Login.scss
+++ b/discord-clone-udemy/src/components/login/Login.scss
@@ -6,18 +6,21 @@
   width: 100%;
   height: 100vh;
   gap: 30px;
-}
+  background-color: #33363d;
 
-button {
-  width: 200px;
-  background-color: #738adb;
-  color:#eff2f5;
-  font-weight: 800;
 
-  &hover {
-    background-color: black;
-    color:#738adb
+  button {
+    width: 200px;
+    background-color: #738adb;
+    color:#eff2f5;
+    font-weight: 800;
+
+    &:hover {
+      background-color: black;
+      color:#738adb
+    }
   }
+
   .loginLogo {
     img {
       object-fit: cover;
