--- a/discord-clone-udemy/src/components/chat/ChatHeader.scss
+++ b/discord-clone-udemy/src/components/chat/ChatHeader.scss
@@ -41,7 +41,7 @@
 
       input {
         background: transparent;
-        outline: 0;
+        outline: none;
         color: white;
         border: none;
       }
