--- a/discord-clone-udemy/src/components/sidebar/Sidebar.scss
+++ b/discord-clone-udemy/src/components/sidebar/Sidebar.scss
@@ -1,8 +1,8 @@
 .sidebar {
   display: flex;
-  flex:0.35;//homeの35%を占有することを記載
+  flex: 0.3; // homeの35%を占有することを記載
   height: 100vh;
-  background-color: #393943;
+  background-color: #000;
 
 
   .sidebarleft {
@@ -14,8 +14,8 @@
 
 
     .serverIcon {
-      width: 60px;
-      height: 60px;
+      width: 50px;
+      height: 50px;
       background-color: #393943;
       border-radius: 9999px;
       margin-bottom: 10px;
@@ -37,6 +37,7 @@
     background-color: #2b2d33;
     width: 300px;
     position: relative;
+    flex-grow: 1;
     .sidebarTop{
       color: #ffffff;
       display: flex;
